# EasyTSAD

./: .gitignore  pyproject.toml
.ipynb_checkpoints/: process_rawdata-checkpoint.py
EasyTSAD/Methods/OFA/: download_gpt2.py
Examples/run_baseline/: run.py
Examples/summary_result/: run.py
datasets-main/: README.md
datasets-main/UTS/CalIt2/CalIt2-traffic.test_in_count/: test.npy  test_label.npy  test_timestamp.npy  train.npy  train_label.npy
datasets-main/UTS/CalIt2/CalIt2-traffic.test_out_count/: info.json  test.npy  train.npy
datasets-main/UTS/GutenTAG/cbf-combined-diff-1/: info.json  test.npy  test_label.npy  train.npy  train_label.npy
datasets-main/UTS/GutenTAG/cbf-combined-diff-2/: test.npy  test_label.npy  train.npy  train_label.npy
datasets-main/UTS/GutenTAG/cbf-combined-diff-3/: test.npy  test_label.npy  train.npy  train_label.npy
datasets-main/UTS/GutenTAG/cbf-diff-count-1/: test.npy  test_label.npy  train.npy  train_label.npy
datasets-main/UTS/GutenTAG/cbf-diff-count-2/: test.npy  test_label.npy  train.npy  train_label.npy
datasets-main/UTS/GutenTAG/cbf-diff-count-3/: info.json  test.npy  test_label.npy  train.npy  train_label.npy
datasets-main/UTS/GutenTAG/cbf-diff-count-4/: test.npy  test_label.npy  train.npy  train_label.npy
datasets-main/UTS/GutenTAG/cbf-diff-count-5/: test.npy  test_label.npy  train.npy  train_label.npy
datasets-main/UTS/GutenTAG/cbf-diff-count-6/: test.npy  test_label.npy  train.npy  train_label.npy
datasets-main/UTS/GutenTAG/cbf-diff-count-7/: info.json  test.npy  test_label.npy  train.npy  train_label.npy
(+14838 files in other folders)
