[tool.poetry]
name = "EasyTSAD-Benchmark"
version = "0.2.0.2"
description = "A Suite for TimeSeries Anomaly Detection Benchmark"
authors = ["HT Si <htsi@cnic.cn>"]
license = "GPL-3.0"
readme = "README.md"
packages = [{include = "EasyTSAD"}]

[tool.poetry.dependencies]
python = ">=3.9 <3.13"
toml = "^0.10.2"
numpy = "^1.26.1"
matplotlib = "^3.8.0"
tqdm = "^4.66.1"
scikit-learn = "^1.3.2"
pandas = "^2.1.2"
easytsad = "^0.3.0.2"
statsmodels = "^0.14.4"
tslearn = "^0.6.3"
torchinfo = "^1.8.0"
torch = "^2.6.0"
torch-optimizer = "^0.3.0"
pytorch-lightning = "^2.5.1"
torchvision = "^0.21.0"
transformers = "^4.51.3"
einops = "^0.8.1"
tensorboard = "^2.19.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
